--- a/pixel-art-scaler/index.css
+++ b/pixel-art-scaler/index.css
@@ -16,9 +16,14 @@ body {
     padding: 3.5rem;
 }
 
+.logo {
+    height: 3rem;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
 h1 {
-    margin-top: 0;
-    margin-bottom: 1rem;
+    margin: 0;
     font-size: 3rem;
 }
 
@@ -69,7 +74,7 @@ h1 {
     font-size: 2rem;
 }
 
-.instructions {
+.information {
     color: black;
     font-size: 1rem;
     margin: 0;
@@ -79,7 +84,6 @@ h1 {
 .clear-saved-img-btn {
     background-color: #f0f0f0;
     border: none;
-    margin-top: 1rem;
     margin-bottom: 1rem;
     padding: .5rem;
     padding-top: .3rem;
@@ -112,10 +116,33 @@ h1 {
 }
 
 .preview {
-    width: 50%;
-    height: auto;
+    height: 8rem;
 }
 
 input[type="number"] {
     width: 80px;
+    -moz-appearance: textfield;
+    appearance: textfield;
+    background-color: #f0f0f0;
+    border: none;
+    padding: .5rem;
+    padding-top: .3rem;
+    padding-bottom: .3rem;
+    font-family: 'Jersey 25', sans-serif;
+    font-size: 1rem;
+    cursor: text;
+}
+
+input[type="number"]:hover {
+    background-color: #ececec;
+}
+
+input[type="number"]:active, input[type="number"]:focus {
+    border: none !important;
+    outline: none !important;
+    background-color: #ececec;
+}
+
+label {
+    cursor: text;
 }
