--- a/pixel-art-scaler/index.css
+++ b/pixel-art-scaler/index.css
@@ -1,34 +1,28 @@
+/* Base styles */
 body {
     font-family: 'Jersey 25', sans-serif;
-    text-rendering: optimizeLegibility;
-
-    background: #f0f0f0;
-    margin: 2rem;
-    margin-left: 6vw;
-    margin-right: 6vw;
-
     font-size: 1.2rem;
+    text-rendering: optimizeLegibility;
+    background: #f0f0f0;
+    margin: 2rem 6vw;
 }
 
+/* Containers */
 .container {
     margin: auto;
     background: white;
     padding: 3.5rem;
 }
 
-.logo {
-    height: 3rem;
-    margin-top: auto;
-    margin-bottom: auto;
-}
-
-h1 {
-    margin: 0;
-    font-size: 3rem;
+.preview-container {
+    text-align: center;
 }
 
 .file-input-container {
     position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     height: 11rem;
     padding: 20px;
@@ -36,18 +30,6 @@ h1 {
     background-color: #f0f0f0;
     color: #eee;
     font-family: 'Jersey 25', sans-serif;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-  
-.file-input-container input[type="file"] {
-    position: absolute;
-    top: 0; left: 0;
-    width: 100%; height: 100%;
-    opacity: 0;
-    cursor: pointer;
-    z-index: 2;
 }
 
 .file-drop-area {
@@ -66,28 +48,91 @@ h1 {
     align-items: center;
 }
 
+/* Headings */
+h1 {
+    margin: 0;
+    font-size: 3rem;
+}
+
+/* Logos */
+.logo {
+    height: 3rem;
+    margin: auto 0;
+}
+
+/* Labels and Information */
 .label {
     color: black;
-    font-weight: normal;
-    margin-top: .5rem;
-    margin-bottom: .5rem;
     font-size: 2rem;
+    font-weight: normal;
+    margin: 0.5rem 0;
 }
 
 .information {
     color: black;
     font-size: 1rem;
-    margin: 0;
-    margin-top: .5rem;
+    margin-top: 0.5rem;
+    margin-bottom: 0;
 }
 
+/* Inputs */
+input[type="file"] {
+    position: absolute;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    opacity: 0;
+    cursor: pointer;
+    z-index: 2;
+}
+
+input[type="number"] {
+    width: 5rem;
+    appearance: textfield;
+    -moz-appearance: textfield;
+    background-color: #f0f0f0;
+    border: none;
+    padding: 0.3rem 0.5rem;
+    font-family: 'Jersey 25', sans-serif;
+    font-size: 1rem;
+    cursor: text;
+}
+
+input[type="number"]:hover {
+    background-color: #ececec;
+}
+
+input[type="number"]:active,
+input[type="number"]:focus {
+    outline: none !important;
+    background-color: #ececec;
+    border: none !important;
+}
+
+input[type="number"]:disabled {
+    background-color: #d8d8d8;
+    cursor: not-allowed;
+}
+
+input[type="number"]:disabled:hover {
+    background-color: #c2c2c2;
+}
+
+/* Canvas */
+#canvas {
+    height: 8rem;
+    margin-left: auto;
+}
+
+.preview {
+    height: 8rem;
+}
+
+/* Clear button */
 .clear-saved-img-btn {
     background-color: #f0f0f0;
     border: none;
     margin-bottom: 1rem;
-    padding: .5rem;
-    padding-top: .3rem;
-    padding-bottom: .3rem;
+    padding: 0.3rem 0.5rem;
     font-family: 'Jersey 25', sans-serif;
     font-size: 1.2rem;
     cursor: pointer;
@@ -104,57 +149,9 @@ h1 {
     box-shadow: 0rem 0rem #c9c9c9ce;
 }
 
+/* Utility */
 .scaleInputText {
     font-size: 1rem;
-}
-
-#canvas {
-    max-width: 50%;
-    height: auto;
-    display: block;
-    margin: auto;
-}
-
-.preview-container {
-    text-align: center;
-}
-
-.preview {
-    height: 8rem;
-}
-
-input[type="number"] {
-    width: 5rem;
-    -moz-appearance: textfield;
-    appearance: textfield;
-    background-color: #f0f0f0;
-    border: none;
-    padding: .5rem;
-    padding-top: .3rem;
-    padding-bottom: .3rem;
-    font-family: 'Jersey 25', sans-serif;
-    font-size: 1rem;
-    cursor: text;
-}
-
-input[type="number"]:hover {
-    background-color: #ececec;
-}
-
-input[type="number"]:active, input[type="number"]:focus {
-    border: none !important;
-    outline: none !important;
-    background-color: #ececec;
-}
-
-input[type="number"]:disabled {
-    background-color: #d8d8d8;
-    cursor: not-allowed;
-}
-
-input[type="number"]:disabled:hover {
-    background-color: #c2c2c2;
-    cursor: not-allowed;
 }
 
 label {
