--- a/index.css
+++ b/index.css
@@ -48,26 +48,104 @@
 /* toolsContainer */
 
 .toolsContainer {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 2rem;
-    margin: 4rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+
+    text-align: center;
+}
+
+    /* Sub - Other Divs */
+
+    .toolsContainer-iconContainer-PAS {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        gap: 1rem;
+    }
+
+    .toolsContainer-icon {
+        height: 3rem;
+        width: 3rem;
+    }
+
+/* pas-title */
+
+.pas-title {
+    font-weight: 500;
+    font-size: 3rem;
 }
 
 /* toolCard */
 
 .toolCard {
+    margin-left: 30dvw;
+    margin-right: 30dvw;
+
     padding: 2rem;
 
-    background-color: #F6D5D6;
+    background-color: #eeeeee;
 
-    border-radius: 0.5rem;
+    border: 1.5px solid #e4e4e4;
 
-    box-shadow: inset 0 0 0.5rem rgba(246, 213, 214, 0.2);
+    border-radius: 16px;
 }
 
     /* Sub - Elements */
 
-    .toolCard h1, h2, h3, h4, h5, h6, p {
+    .toolCard p {
         margin: 0;
+
+        font-size: 1.2rem;
+    }
+
+    .toolCard button {
+        margin-top: 2rem;
+
+        padding: 1.5rem;
+
+        padding-top: 0.5rem;
+        padding-bottom: 0.5rem;
+
+        font-size: 1.75rem;
+        font-weight: 700;
+
+        background-color: #e4e4e4;
+
+        text-transform: uppercase;
+
+        cursor: pointer;
+
+        border-radius: 12px;
+
+        border: 1px solid #d4d4d4;
+
+        box-shadow: 0.25rem 0.25rem 0px #d4d4d4;
+
+        transition: all 25ms ease-out;
+    }
+
+    .toolCard button:hover {
+        background-color: #dddddd;
+
+        transition: all 25ms ease-in;
+    }
+
+    .toolCard button:active {
+        background-color: #cccccc;
+
+        transform: translate(0.25rem, 0.25rem);
+
+        box-shadow: 0px 0px 0px #d4d4d4;
+    }
+
+    /* Sub - Other Divs */
+
+    .toolCard-image {
+        width: 90%;
+        height: auto;
+
+        margin-bottom: 2rem;
+
+        border-radius: 12px;
     }
