Add responsive styles for toolCard and update font links in HTML files

--- a/index.css
+++ b/index.css
@@ -151,3 +151,10 @@
 
         border-radius: 12px;
     }
+
+@media screen and (max-width: 480px) {
+    .toolCard {
+        margin-left: 5vw;
+        margin-right: 5vw;
+    }
+}
